tests/snapshots/examples_fixtures/type_system__failing__180_type_adt_missing_assign.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/180_type_adt_missing_assign.flx
== compile ==
failed (parse)
== diagnostics ==
error[E034]: Missing Type Definition

Expected `=` after type declaration name.

  examples/type_system/failing/180_type_adt_missing_assign.flx:23:15
   |
23 | type Maybe<T> Some(T) | None
   |               ^^^^

Hint:
  ADT sugar uses `type Name = Ctor(...) | Other`.


error[E031]: Expected Expression

Expected expression, found `|`.

  examples/type_system/failing/180_type_adt_missing_assign.flx:23:23
   |
23 | type Maybe<T> Some(T) | None
   |                       ^

Found 2 errors.
== stdout ==
<not executed>
